--- a/SignalRWebUI/SignalRWebUI.csproj
+++ b/SignalRWebUI/SignalRWebUI.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\SignalR.EntityLayer\SignalR.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="QRCoder">
+      <HintPath>..\..\..\QRCoder.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
